Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.1.0
-
None
Description
When an application writes to text to stdout without a newline, but calls fflush() instead, creator will pick up the separate strings. The problem is that it then adds newlines after every fflushed string. So instead of:
Testing: 0.. 10..
I get:
Testing: 0 . . 10 . .
Attachments
Issue Links
- relates to
-
QTCREATORBUG-19367 Blank lines in Application Output pane
-
- Closed
-
-
QTCREATORBUG-19811 [REG 4.5 -> 4.6] Multiple empty lines at end of compile output
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-17403 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
212424,2 | ProjectExplorer: Do not add too many newlines | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |