src/plugins/projectexplorer/applicationlauncher.h
@@ -70,7 +70,7 @@ public:
     static QString msgWinCannotRetrieveDebuggingOutput();
 
 signals:
-    void appendMessage(const QString &message, Utils::OutputFormat format);
+    void appendMessage(const QString &message, Utils::OutputFormat format, bool appendNewLine = true);
     void processStarted();
     void processExited(int exitCode, QProcess::ExitStatus);
     void error(QProcess::ProcessError error);
